use valueOf()